# data-engineering-aws

./: .gitpod.yml  README.md  requirements.txt
airflow/: Dockerfile  README.md
airflow/dags/: demo.py
airflow_docker/: README.md  docker-compose.yml
airflow_docker/dags/: csvtojson.py  data.csv
dbt_elt/: README.md  dbt_project.yml
dbt_elt/models/: customer_report.sql  fct_debit.sql  vendor_report.sql
dbt_elt/models/marts/credit/: int_credit_coc_account.sql  int_credit_customers.sql  int_credit_enterprise.sql  int_credit_non_wallet.sql  int_credit_operational.sql  int_credit_organizations.sql  int_credit_trust.sql
dbt_elt/models/marts/debit/: int_debit_coc_account.sql  int_debit_customers.sql  int_debit_enterprise.sql  int_debit_non_wallet.sql  int_debit_operational.sql  int_debit_organizations.sql  int_debit_trust.sql
dbt_elt/models/staging/: sources.yml  stg_coc_accounts.sql  stg_credit_transactions.sql  stg_enterprises.sql  stg_organizations.sql  stg_trust_accounts.sql  stg_user_accounts.sql
dbt_elt/models/staging/transaction/: stg_transactions.sql  stg_transactions_transaction_report.sql  stg_transactions_wallet_to_wallet.sql
dbt_elt/models/staging/wallets/: stg_coc_account_wallet.sql  stg_enterprise_account_wallet.sql  (+6 more)
eltcli/: README.md  pyproject.toml
eltcli/eltcli/: READ.md  aggregation-user-day.sql  command.sh  main.py  query.sql
eltcli/tests/: test_eltcli.py
etl-aws-lambda/: README.md  main.py  serverless.yml
etl_by_pandas/: 1.extract.ipynb  2.load.ipynb  3.transform.ipynb  README.md  coc.sql  data.json  fromdb.csv  sample.csv
