[tool.poetry]
name = "eltcli"
version = "0.1.0"
description = "Command Line Interface for comman ETL Task"
authors = ["yasar <shaikhyasar460@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
eltcli = "eltcli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.5.0"
pandas = "^1.4.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
